# DOOM

./: .gitignore  CMakeLists.txt  Makefile  README.md  author  doom  doom_sample.c  level_editor  map.doom  map2.doom  sprite.doom  test.c  test.doom
editor/: .gitignore  Makefile  example  level.doom  level_editor
editor/frameworks/SDL2_mixer.framework/Versions/A/Frameworks/mpg123.framework/Versions/A/Resources/: LICENSE.mpg123.txt
editor/include/: level_editor.h
editor/libft/: Makefile  ft_atoi.c  ft_memchr.c  get_next_line.c  libft.h
editor/maps/: big3.wf  map1.wf  simple.wf  test.wf
editor/src/: button.c  error_file.c  error_libs.c  event_mouse_handle.c  game.c  image_loader.c  init_app.c  intersection.c  main.c  menu_panel.c  render_app.c  render_line.c  render_point.c  render_shape.c  render_text.c  save_level_map.c  shape.c  shape_neighbors.c  shape_neighbors2.c  shape_optimization.c  utils.c
inc/: defines.h  doom.h  events.h  libft.h  parser.h  render.h  render_heights.h  render_scaler.h  render_wall.h  utils.h
level/: 0000.story  0001.story  0100.story  0101.story  0200.story  key.doom  level.doom  map.doom  map2.doom  sprite.doom  test.doom
sdl_test/: Makefile
sdl_test/src/: test.c
src/: action_utils.c  actions.c  doom_sample.c  doom_sample2.c  event.c  event_key_bumping.c  event_key_collision.c  event_key_moves.c  event_keys.c  event_mouse_view.c  free.c  hud.c  level.c  loader.c  main.c  music.c  render.c  render_floor_ceil.c  render_heights.c  render_line.c  render_perspective.c  render_scaler.c  render_towards.c  render_wall.c  render_wall_intersection.c  text_utils.c  texts.c  utils_intersection.c  utils_point_side.c  utils_xyz.c
src/parser/: connect_level.c  connect_player.c  connect_sector.c  connect_sector_object.c  main.c  map_sector_utils.c  map_vertex_utils.c  parsed_data_connector.c  parser.c  parser_level.c  parser_sector.c  parser_str_utils.c  parser_textures.c  parser_utils.c  parser_validation.c
src/parser/ft_lib/: for_each_gnl.c  ft_atoi.c  ft_itoa.c  ft_str_contains.c  get_next_line.c
tests/: Makefile
tests/includes/: test.h
tests/src/: sdl_testing.c
